Bug 1068987 - Hide main gallery views when dialogs are visible.

--- a/apps/gallery/style/gallery.css
+++ b/apps/gallery/style/gallery.css
@@ -41,6 +41,11 @@ section {
   display: none;
 }
 
+/* hide sections from screen reader when modal dialogs are showing */
+body.showing-dialog > section {
+  visibility: hidden;
+}
+
 /* All of the main views fill the screen */
 #fullscreen-view, #edit-view, #crop-view, #thumbnail-views {
   position: absolute;
